开放视频内容接口的匿名访问
